// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Flags > --resolve-* > resolve-alias reporter should apply #0 1`] = `
Object {
  "entry": "<PROJECT_ROOT>/test/fixtures/flags/resolve/entry.js",
  "mode": "development",
  "plugins": Array [
    NamedModulesPlugin {
      "options": Object {},
    },
  ],
  "reporter": "<PROJECT_ROOT>/test/fixtures/common/test-reporter.js",
  "resolve": Object {
    "alias": Object {
      "aliased": "<PROJECT_ROOT>/test/fixtures/flags/resolve/aliased",
    },
  },
}
`;

exports[`Flags > --resolve-* > resolve-alias reporter should build #0 1`] = `
"Version: webpack 4.14.0
  Asset      Size  Chunks             Chunk Names
main.js  4.61 KiB    main  [emitted]  main
Entrypoint main = main.js
[./test/fixtures/flags/resolve/aliased/dependency.js] 39 bytes {main} [built]
[./test/fixtures/flags/resolve/entry.js] 150 bytes {main} [built]"
`;

exports[`Flags > --resolve-* > resolve-alias reporter should build #1 1`] = `"23f35c9e"`;

exports[`Flags > --resolve-* > resolve-extensions reporter should apply #0 1`] = `
Object {
  "entry": "<PROJECT_ROOT>/test/fixtures/flags/resolve/entry-extensions.js",
  "mode": "development",
  "plugins": Array [
    NamedModulesPlugin {
      "options": Object {},
    },
  ],
  "reporter": "<PROJECT_ROOT>/test/fixtures/common/test-reporter.js",
  "resolve": Object {
    "extensions": Array [
      ".custom",
    ],
  },
}
`;

exports[`Flags > --resolve-* > resolve-extensions reporter should build #0 1`] = `
"Version: webpack 4.14.0
  Asset      Size  Chunks             Chunk Names
main.js  4.64 KiB    main  [emitted]  main
Entrypoint main = main.js
[./test/fixtures/flags/resolve/dependency.custom] 38 bytes {main} [built]
[./test/fixtures/flags/resolve/entry-extensions.js] 144 bytes {main} [built]"
`;

exports[`Flags > --resolve-* > resolve-extensions reporter should build #1 1`] = `"4ae3815"`;

exports[`Flags > --resolve-* > resolve-loader-alias reporter should apply #0 1`] = `
Object {
  "entry": "<PROJECT_ROOT>/test/fixtures/flags/resolve/entry-loader-alias.js",
  "mode": "development",
  "plugins": Array [
    NamedModulesPlugin {
      "options": Object {},
    },
  ],
  "reporter": "<PROJECT_ROOT>/test/fixtures/common/test-reporter.js",
  "resolveLoader": undefined,
}
`;

exports[`Flags > --resolve-* > resolve-loader-alias reporter should build #0 1`] = `
"Version: webpack 4.14.0
  Asset      Size  Chunks             Chunk Names
main.js  17.9 KiB    main  [emitted]  main
Entrypoint main = main.js
[./node_modules/path-browserify/index.js] 6.04 KiB {main} [built]
[./node_modules/process/browser.js] 5.29 KiB {main} [built]
[./test/fixtures/flags/resolve sync recursive ^aliased!.*$] ./test/fixtures/flags/resolve sync ^aliased!.*$ 160 bytes {main} [built]
[./test/fixtures/flags/resolve/entry-loader-alias.js] 283 bytes {main} [built]"
`;

exports[`Flags > --resolve-* > resolve-loader-alias reporter should build #1 1`] = `"9a21ea9e"`;
